--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <div class="container">
   <h1>Word Counter</h1>
+  <div class="output row">
+  <input type="number" placeholder="Enter Word Limit..." id="myInput">
+   <button type="button" onclick="getInputValue();">Set Value 
+</div>
   <textarea id="text" placeholder="Enter your text here..."></textarea>
 
 
@@ -19,7 +23,7 @@
   	    <div>Words: <span id="wordCount">0</span></div>
   </div>
   <div class="output row">
-  	    <div>Words Left: <span id="wordLeft">500</span></div>
+  	    <div>Words Left: <span id="wordLeft">0</span></div>
   </div>
 </div>
 
